up filter running

--- a/dsp/dsp.html
+++ b/dsp/dsp.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Digital Signal Processing</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <p>Web ini bisa digunakan untuk melakukan pengolahan data sederhana</p>
+    <a href="filter/filter.html">Filter</a>
 </body>
 </html>
