--- a/dsp/filter/filter.html
+++ b/dsp/filter/filter.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Filter</title>
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <p>Web ini bisa digunakan untuk melakukan pengolahan data sederhana</p>
+    <a href="https://zuthiepcbcaqyvxbssixkb.streamlit.app/">Running Time</a>
 </body>
 </html>
