--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Model AI</title>
+    <title>Pengolahan Sinyal</title>
 </head>
 <body>
     <a href="about.html">About</a>
     <h1>Selamat Datang!</h1>
     <hr>
+    <p><a href="dsp/dsp.html">Digital Signal Processing</a></p>
     <p>Tempat uji coba model AI/ML/DL</p>
     <div><a href="https://dasbor-hrln7azhtyatq5yawvzpzb.streamlit.app/">Regresi Linier</a></div>
 
