--- a/ai/ai.html
+++ b/ai/ai.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filter</title>
+    <title>Artificial Intelligence</title>
 </head>
 <body>
-    <p>Pilih jenis filter</p>
-
-    <a href="https://zuthiepcbcaqyvxbssixkb.streamlit.app/">Running Time</a>
+    <a href="ds.html">Data Science</a>
+    <a href="ml.html">Machine Learning</a>
+    <a href="dl.html">Deep Learning</a>
 </body>
 </html>
