--- a/ai/ml/ml.html
+++ b/ai/ml/ml.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filter</title>
+    <title>Machine Learning</title>
 </head>
 <body>
-    <p>Pilih jenis filter</p>
-
-    <a href="https://zuthiepcbcaqyvxbssixkb.streamlit.app/">Running Time</a>
+    <p>Supervised Learning</p>
+    <a href="https://dasbor-hrln7azhtyatq5yawvzpzb.streamlit.app/">Linear Regression</a>
 </body>
 </html>
