--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <a href="about.html">About</a>
     <h1>Selamat Datang!</h1>
     <hr>
+    <p>Pengolahan Sinyal Digital</p>
     <p><a href="dsp/dsp.html">Digital Signal Processing</a></p>
-    <p>Tempat uji coba model AI/ML/DL</p>
+    <p>Model AI/ML/DL</p>
     <div><a href="https://dasbor-hrln7azhtyatq5yawvzpzb.streamlit.app/">Regresi Linier</a></div>
 
 </body>
