--- a/ai/ai.html
+++ b/ai/ai.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="ds.html">Data Science</a>
-    <a href="ml.html">Machine Learning</a>
+    <a href="ml/ml.html">Machine Learning</a>
     <a href="dl.html">Deep Learning</a>
 </body>
 </html>
