--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Pengolahan Sinyal Digital</p>
     <p><a href="dsp/dsp.html">Digital Signal Processing</a></p>
     <p>Model AI/ML/DL</p>
-    <div><a href="https://dasbor-hrln7azhtyatq5yawvzpzb.streamlit.app/">Regresi Linier</a></div>
+    <div><a href="ai/ai.html">Artificial Intelligence</a></div>
 
 </body>
 </html>
